--- a/src/index.html
+++ b/src/index.html
@@ -8,21 +8,22 @@
   For examples of using it with htmlWebpackPlugin,
   see https://github.com/jaketrent/html-webpack-template/blob/master/index.ejs
   -->
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!--
+  <!--
     The htmlWebpackPlugin will parse the logic below so that trackJS is only added to the production version of index.html (since only webpack.config.prod.js provides the trackJS token)
     This is an example of how to add features to index.html for only one environment.
    -->
-    <% if (htmlWebpackPlugin.options.trackJSToken) { %>
-    <!-- BEGIN TRACKJS -->
-    <script type="text/javascript">window._trackJs = { token: '<%=htmlWebpackPlugin.options.trackJSToken%>' };</script>
-    <script type="text/javascript" src="https://cdn.trackjs.com/releases/current/tracker.js"></script>
-    <!-- END TRACKJS -->
-    <% } %>
+  <% if (htmlWebpackPlugin.options.SentryEnable) { %>
+  <!-- BEGIN Centry -->
+  <script src = "./buildScripts/centralSetup.js" ></script>   
+  <!-- END Centry -->
+  <% } %>
   <meta charset="UTF-8">
 </head>
+
 <body>
   <h1>Users</h1>
   <table>
@@ -38,4 +39,5 @@
     </tbody>
   </table>
 </body>
+
 </html>
